force-app/main/default/objects/Product_Group__c/fields/Alternate__c.field-meta.xml
<CustomField>
    <fullName>Alternate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternate</label>
    <type>Checkbox</type>
</CustomField>