force-app/main/default/objects/Product_Group__c/fields/Grand_Quantity_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Quantity_Total__c</fullName>
    <label>Grand Quantity Total</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>