force-app/main/default/objects/Product_Group__c/fields/Hide_Amount__c.field-meta.xml
<CustomField>
    <fullName>Hide_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Amount</label>
    <type>Checkbox</type>
</CustomField>