force-app/main/default/objects/Product_Group__c/fields/Hide_Base_Bid_Total__c.field-meta.xml
<CustomField>
    <fullName>Hide_Base_Bid_Total__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Base Bid Total</label>
    <type>Checkbox</type>
</CustomField>