force-app/main/default/objects/Product_Group__c/fields/Hide_Code__c.field-meta.xml
<CustomField>
    <fullName>Hide_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Code</label>
    <type>Checkbox</type>
</CustomField>