force-app/main/default/objects/Product_Group__c/fields/Hide_Line__c.field-meta.xml
<CustomField>
    <fullName>Hide_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Line</label>
    <type>Checkbox</type>
</CustomField>