force-app/main/default/objects/Product_Group__c/fields/Hide_Price_Column__c.field-meta.xml
<CustomField>
    <fullName>Hide_Price_Column__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Price Column</label>
    <type>Checkbox</type>
</CustomField>