force-app/main/default/objects/Product_Group__c/fields/Is_Section_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Section_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Section Closed?</label>
    <type>Checkbox</type>
</CustomField>