force-app/main/default/objects/Product_Group__c/fields/Page_Break__c.field-meta.xml
<CustomField>
    <fullName>Page_Break__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Page Break</label>
    <type>Checkbox</type>
</CustomField>