force-app/main/default/objects/Product_Group__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Product Groups</relationshipLabel>
    <relationshipName>Product_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>