force-app/main/default/objects/Product_Group__c/fields/Release_Number__c.field-meta.xml
<CustomField>
    <fullName>Release_Number__c</fullName>
    <label>Release Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.1</fullName>
            </value>
            <value>
                <fullName>1.2</fullName>
            </value>
            <value>
                <fullName>1.3</fullName>
            </value>
            <value>
                <fullName>1.4</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>1.6</fullName>
            </value>
            <value>
                <fullName>1.7</fullName>
            </value>
            <value>
                <fullName>1.8</fullName>
            </value>
            <value>
                <fullName>1.9</fullName>
            </value>
            <value>
                <fullName>2.1</fullName>
            </value>
            <value>
                <fullName>2.2</fullName>
            </value>
            <value>
                <fullName>2.3</fullName>
            </value>
            <value>
                <fullName>2.4</fullName>
            </value>
            <value>
                <fullName>2.5</fullName>
            </value>
            <value>
                <fullName>2.6</fullName>
            </value>
            <value>
                <fullName>2.7</fullName>
            </value>
            <value>
                <fullName>2.8</fullName>
            </value>
            <value>
                <fullName>2.9</fullName>
            </value>
            <value>
                <fullName>3.1</fullName>
            </value>
            <value>
                <fullName>3.2</fullName>
            </value>
            <value>
                <fullName>3.3</fullName>
            </value>
            <value>
                <fullName>3.4</fullName>
            </value>
            <value>
                <fullName>3.5</fullName>
            </value>
            <value>
                <fullName>3.6</fullName>
            </value>
            <value>
                <fullName>3.7</fullName>
            </value>
            <value>
                <fullName>3.8</fullName>
            </value>
            <value>
                <fullName>3.9</fullName>
            </value>
            <value>
                <fullName>4.1</fullName>
            </value>
            <value>
                <fullName>4.2</fullName>
            </value>
            <value>
                <fullName>4.3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>