force-app/main/default/objects/Product_Group__c/fields/Total_Extended_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Extended_Cost__c</fullName>
    <label>Total Extended Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>