force-app/main/default/objects/Product_Group__c/fields/Total_Group_Freight__c.field-meta.xml
<CustomField>
    <fullName>Total_Group_Freight__c</fullName>
    <label>Total Group Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>