force-app/main/default/objects/Product_Group__c/fields/Total_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Items__c</fullName>
    <label>Total Line Items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>