force-app/main/default/objects/Product_Group__c/fields/Total_Sub_Groups__c.field-meta.xml
<CustomField>
    <fullName>Total_Sub_Groups__c</fullName>
    <label>Total Sub Groups</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>