force-app/main/default/objects/Product_Group__c/fields/Unique_Index__c.field-meta.xml
<CustomField>
    <fullName>Unique_Index__c</fullName>
    <label>Unique Index</label>
    <length>25</length>
    <type>Text</type>
</CustomField>